--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,13 +1,15 @@
 [uwsgi]
 
-socket = tmp/app.sock
-chmod-socket = 666
-protocol = http
 module = run:app
-pidfile = tmp/pid
-daemonize = tmp/log
+
 master = true
 processes = 1
-vacuum = 1
-enable-threads = 1
-die-on-tern = 1
+
+socket = tmp/app.sock
+chmod-socket = 666
+vacuum = true
+
+die-on-term = true
+
+pidfile = tmp/pid
+
